Floated the navbar brand to the left. There was an issue during the navbar collapse which was floating it to the right

--- a/source/scss/_navbar.scss
+++ b/source/scss/_navbar.scss
@@ -22,6 +22,7 @@ $colour-navbar-text-hover: #DC143C;
   .navbar-brand {
     font-size: 1.25em;
     color: white !important;
+    float: left;
   }
 
   // Page Link Buttons.
